<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/colorBlue"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/topNameA_text"
        android:textColor="@color/colorPlain"
        android:textSize="42sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/startAB_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startB_button"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"/>
        <Button
            android:id="@+id/startAC_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startC_button"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"/>
        <Button
            android:id="@+id/finishA_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finishA_button"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"/>
        <Button
            android:id="@+id/dialogA_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_button"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_gravity="left"
        android:text="Lifecycle Method List"
        android:textColor="@color/colorPlain"
        android:textSize="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/activityA_textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorWhite"
            android:minLines="8"
            android:textColor="@color/colorBlack"
            android:textSize="16dp" />
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="left"
        android:text="Activity Status"
        android:textColor="@color/colorPlain"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/activityA_textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="4"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="left"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"
        android:textSize="16dp" />
</LinearLayout>