<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/colorGreen"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/topNameB_text"
        android:textColor="@color/colorGreenWhite"
        android:textSize="42sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/startBA_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startA_button"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"/>
        <Button
            android:id="@+id/startBC_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startC_button"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"/>
        <Button
            android:id="@+id/finishB_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finishB_button"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"/>
        <Button
            android:id="@+id/dialogB_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_button"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_gravity="left"
        android:text="Lifecycle Method List"
        android:textColor="@color/colorGreenWhite"
        android:textSize="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/activityB_textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorWhite"
            android:minLines="8"
            android:textColor="@color/colorBlack"
            android:textSize="16dp" />
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="left"
        android:text="Activity Status"
        android:textColor="@color/colorGreenWhite"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/activityB_textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="4"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="left"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"
        android:textSize="16dp" />

</LinearLayout>
